# tzotzil-bible-V2.0

./: .coverage  .coveragerc  .dockerignore  .replit  .replitignore  APK_BUILD_INSTRUCTIONS.md  App.tsx  DEPLOYMENT_CONFIG.txt  GOOGLE_PLAY_COMPLIANCE.md  LICENSE  README.md  __init__.py  app.json  app.py  auth.py  azure_openai_config.py  babel.config.js  base.html  bible_data.py  bible_data_access.py  chat_request.py  database.py  database_export.py  db_monitor.py  deploy.sh  document_processor.py  egw_web_search.py  er2', 'Doe', '123456789', 'test2@example.com', 'hashedpassword');  ername VARCHAR(80) NOT NULL,  error_handlers.py  extensions.py  extract.py  health_check.py  init_db.py  knowledge_base_manager.py  main.py  metro.config.js  models.py  nevin.css  nevin_ai_core.py  (+26 more)
TzotzilBibleApp-v3/: Pasted-Parte-1-Ajustar-Colores-y-Contraste-de-Fuentes-javascript-Copy-code-Modifica-los-estilos-CSS-pa-1730525508774.txt  bible_data_access.py  cache_manager.py  clean.py  document_processor.py  import_bible_data.py  import_promises.py  import_theological_content.py  nevin.css  nevin_utils.py  outbox_processor.py  package-lock.json  process_materials.py  promesas.csv  pyproject.toml  requirements.txt  run_outbox.py  schema.sql  test_openai_connection.py
TzotzilBibleApp-v3/Nevin_AI/: __init__.py  bible_data.py  prompts.py
TzotzilBibleApp-v3/Nevin_AI/algorithms/: interpretation_engine.py  (+1 more)
TzotzilBibleApp-v3/instance/: bible_app.db-shm  nevin.db
TzotzilBibleApp-v3/templates/: base.html  books.html  chapters.html  import_progress.html  settings.html  study_mode.html
(+310 files in other folders)
